# i-love-rust-examples

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: bench_example.rs
certs/: create_certs.sh
db/: api.sql  model.sql  setup_database.sh  tbl.sql
docs/: services.json
etc/: config.json
etc/systemd/: admin.service  auth.service  coldvaults_admin.service  coldvaults_auth.service  coldvaults_user.service  iloverust_admin.service  iloverust_auth.service  iloverust_user.service  user.service
examples/: server_main.rs
src/: dataframe_hack.rs  lib.rs  logger.rs  main.rs
src/analyze/: mod.rs
src/codegen/: Cargo.toml  codegen.rs  mod.rs  model.rs  rust.rs  service.rs  sql.rs
src/lib/: Cargo.toml  config.rs  database.rs  dataframe_hack.rs  error_code.rs  handler.rs  id_gen.rs  log.rs  logger.rs  mod.rs  model.rs  toolbox.rs  utils.rs
src/lib/database/: client.rs  connect.rs  connection.rs  manager.rs  mod.rs  stringable.rs
src/lib/poll_data/: mod.rs
src/lib/ws/: basics.rs  client.rs  endpoint.rs  handler.rs  headers.rs  mod.rs  server.rs  verify.rs
src/localdb/: Cargo.toml  client.rs  constants.rs  database.rs  endpoints.rs  main.rs  method.rs  mod.rs
src/localdb/db/: database.rs  mod.rs
src/localdb/db/sql/: create.rs
src/localdb/db/statements/: tokenizer.rs
src/localdb/parsetools/: mod.rs  payloads.rs  row.rs  select.rs  value.rs
src/localdb/sql/: create.rs
src/localdb/statements/: analyzer.rs  mod.rs  tokenizer.rs
src/model/: Cargo.toml  endpoint.rs  lib.rs  service.rs  types.rs
src/poll_data/: mod.rs
src/service/: auth.rs  enums.rs  lib.rs  services.rs
src/service/admin/: admin.rs  endpoints.rs  main.rs  method.rs  pg_func.rs  repo_func.rs
src/service/admin/method/: handler.rs  mod.rs  repository.rs
src/service/auth/: auth.rs  endpoints.rs  header.rs  main.rs  method.rs  pg_func.rs  repo_func.rs
src/service/auth/method/: handler.rs  repository.rs
src/service/user/: endpoints.rs  main.rs  method.rs  pg_func.rs  repo_func.rs  user.rs
src/service/user/method/: handler.rs  repository.rs
src/ws/: basics.rs  handler.rs  headers.rs  mod.rs
static/: admin_firecamp.json  auth_firecamp.json  localdb_firecamp.json  user_firecamp.json
tests/: test_auth.rs  test_example.rs  test_user.rs
tests/tools/: mod.rs
