[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
eyre = "0.6.1"
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.6"
libc = "0.2.126"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
byteorder = "1.4.3"
hex = "0.4.3"
daemonize = "0.4.1"
ctrlc = "3.2.2"
dashmap = "5.3.4"
rayon = "1.5.3"
tokio = { version = "1", features = ["full"] }
crossbeam = "*"
nonzero_ext = "*"
reqwest = { version = "*", features = ["serde_json", "json"] }
governor = "*"
#tungstenite = "*" # included in async-tungstenite
async-tungstenite = { version = "*", features = ["tokio-rustls"] }
async-compat = "*"
futures = "*"
tracing-log = "*"
log-panics = "*"
pin-utils = "*"
serde_json = "*"
ijson = "*"
peroxide = "*"
chrono = "*"
static_assertions = "*"
virtual-table = { git = " https://github.com/nschoellhorn/virtual-table" }

[features]
enable_logging = []
