[package]
name = "coldvaults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive", "env"] }
eyre = "0.6.1"
serde = { version = "1.0.144", features = ["derive"] }
regex = "1.5.6"
libc = "0.2.126"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
byteorder = "1.4.3"
hex = "0.4.3"
daemonize = "0.4.1"
ctrlc = "3.2.2"
dashmap = "5.3.4"
rayon = "1.5.3"
tokio = { version = "1", features = ["full"] }
crossbeam = "*"
nonzero_ext = "*"
reqwest = { version = "*", features = ["serde_json", "json"] }
governor = "*"
tokio-tungstenite = { version = "*", features = [] }
itertools = "0.10.3"
futures = "*"
tracing-log = "*"
log-panics = "*"
pin-utils = "*"
serde_json = "*"
ijson = "*"
peroxide = "*"
chrono = "*"
static_assertions = "*"
tokio-postgres = "*"
tokio-tls = "*"
rustls = "0.20.6"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

deadpool-postgres = "*"
model = { path = "src/model" }
gen = { path = "src/gen" }
lib = { path = "src/lib" }
sha2 = "*"
virtual-table = { git = "https://github.com/nschoellhorn/virtual-table" }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[features]
default = []

[lib]
path = "src/service/lib.rs"

[[bin]]
name = "auth"
path = "src/service/auth/main.rs"

[[bin]]
name = "user"
path = "src/service/user/main.rs"

[[bin]]
name = "admin"
path = "src/service/admin/main.rs"
