[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codegen"
path = "codegen.rs"

[[bin]]
name = "codegen"
path = "codegen.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
eyre = "0.6.1"
model = { path = "../model" }
convert_case = "0.5.0"
itertools = "0.10.3"