[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
eyre = "*"
serde = { version = "*", features = ["derive"] }
regex = "*"
libc = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
byteorder = "*"
hex = "*"
dashmap = "*"
rayon = "*"
tokio = { version = "*", features = ["full"] }
crossbeam = "*"
nonzero_ext = "*"
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "serde_json", "json"] }
governor = "*"
tokio-tungstenite = { version = "*", features = [] }
itertools = "*"
futures = "*"
tracing-log = "*"
log-panics = "*"
pin-utils = "*"
serde_json = "*"
ijson = "*"
peroxide = "*"
chrono = "*"
static_assertions = "*"
tokio-postgres = "*"
uuid = "*"
virtual-table = { git = "https://github.com/nschoellhorn/virtual-table" }
deadpool-postgres = { version = "*", features = ["serde"] }
model = { path = "../model" }
rustls = "0.20.6"
rustls-pemfile = "0.3.0"
tokio-rustls = "0.23.4"
convert_case = "0.5.0"
pem = "*"
urlencoding = "*"
[lib]
name = "lib"
path = "mod.rs"
