[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
eyre = "*"
thiserror = "1.0.37"
serde = { version = "*", features = ["derive"] }
regex = "*"
libc = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
byteorder = "*"
hex = "*"
dashmap = "*"
rayon = "*"
tokio = { version = "*", features = ["full"] }
crossbeam = "*"
nonzero_ext = "*"
reqwest = { version = "*", default-features = false, features = [
	"rustls-tls",
	"serde_json",
	"json",
] }
governor = "*"
tokio-tungstenite = { version = "*", features = [] }
itertools = "*"
futures = "*"
tracing-log = "*"
log-panics = "*"
pin-utils = "*"
serde_json = "*"
ijson = "*"
peroxide = "*"
chrono = "*"
static_assertions = "*"
uuid = "*"
virtual-table = { git = "https://github.com/nschoellhorn/virtual-table" }
deadpool = { version = "*", features = ["serde", "rt_tokio_1"] }
model = { path = "../model" }
rustls = "0.20.6"
rustls-pemfile = "0.3.0"
tokio-rustls = "0.23.4"
convert_case = "0.5.0"
pem = "*"
urlencoding = "*"
gluesql = "0.12"
[lib]
name = "lib"
path = "mod.rs"
